Fixed tests of the new engine gem that now can be included in active metadata gem

--- a/spec/javascripts/fixtures/fatpopcorn-fixture.html
+++ b/spec/javascripts/fixtures/fatpopcorn-fixture.html
@@ -22,17 +22,17 @@
 	</head>
 	<body id="fixture" >
 		<div class="one">
-			<label for="addr_one">Address one</label>&nbsp;<input class="open_popcorn" type="text" name="addr_one" value="Via Mazzini 33" id="addr_one">
+			<label for="addr_one">Address one</label>&nbsp;<input class="open_popcorn" type="text" name="addr_one" value="Via Mazzini 33" id="addr_one" data-label="my_label">
 		</div>
 		<div class="open_popcorn two">
-			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two">
+			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label">
 		</div>
 		<div class="open_popcorn three">
-			<label for="addr_three">Address three</label>&nbsp;<input class="open_popcorn" type="text" name="addr_three" value="Via Mazzini 33" id="addr_three">
+			<label for="addr_three">Address three</label>&nbsp;<input class="open_popcorn" type="text" name="addr_three" value="Via Mazzini 33" id="addr_three" data-label="my_label">
 		</div>
 		<div class="other_element"/>
 		<div class="element_down">
-			<label for="addr_four">Address four</label>&nbsp;<input class="open_popcorn" type="text" name="addr_four" value="Via Mazzini 33" id="addr_four">
+			<label for="addr_four">Address four</label>&nbsp;<input class="open_popcorn" type="text" name="addr_four" value="Via Mazzini 33" id="addr_four" data-label="my_label">
 		</div>
 	</body>	
 </html>
