fixed some errors on assets definition

--- a/spec/dummy/public/index.html
+++ b/spec/dummy/public/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="lib/jquery-1.7.1.min.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="lib/popcorn.js"></script>
+    <script type="text/javascript" src="libcorn.js"></script>
 
     <script type="text/javascript">
       $(function() {
@@ -24,16 +24,16 @@
 
 <body>
     <div style="float: left;">
-        <label for="indirizzo">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo1" class="fppc">
+        <label for="indirizzo">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo1" class="fppc" data-label="my_label">
 	</div>
     <div style="width: 70%; float: right;">
-        <label for="indirizzo">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo2" class="fppc">
+        <label for="indirizzo">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo2" class="fppc" data-label="my_label">
 	</div>
     <div style="float: right;">
-        <label for="indirizzo">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo3" class="fppc">
+        <label for="indirizzo">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo3" class="fppc" data-label="my_label">
 	</div>
 	<div style="float: left; margin-top: 100px">
-		<label for="addr_two">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo4" class="fppc">
+		<label for="addr_two">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo4" class="fppc" data-label="my_label">
 	</div>
 	
 			
