--- a/spec/javascripts/helpers/index.html
+++ b/spec/javascripts/helpers/index.html
@@ -42,6 +42,24 @@
 		<label for="addr_two">Indirizzo</label>&nbsp;<input type="text" name="indirizzo" value="Via Mazzini 33" id="indirizzo4" class="active_metadata_field" data-label="my_label">
 	</div>
 	
+	<div class="grid_3">
+		<span class="fatpopcorn_grip">
+			<div class="_23states" class="active_metadata_field" data-label="ok_installazione">
+				<input type="radio" value="true" true="Sì" nil="/" name="pratiche_progettazione[ok_installazione]" id="pratiche_progettazione_ok_installazione_true" false="No" data-watching="false" data-label="ok_installazione" >
+				<label for="pratiche_progettazione_ok_installazione_true" class="true">
+					<span>Sì</span>
+				</label>
+				<input type="radio" value="" true="Sì" nil="/" name="pratiche_progettazione[ok_installazione]" id="pratiche_progettazione_ok_installazione_" false="No" data-watching="false" data-label="ok_installazione" >
+				<label for="pratiche_progettazione_ok_installazione_" class="nil">
+					<span>/</span>
+				</label>
+				<input type="radio" value="false" true="Sì" nil="/" name="pratiche_progettazione[ok_installazione]" id="pratiche_progettazione_ok_installazione_false" false="No" data-watching="false" data-label="ok_installazione" checked="checked">
+				<label for="pratiche_progettazione_ok_installazione_false" class="false">
+					<span>No</span>
+				</label>
+			</div>
+		</span>
+	</div>
 			
         <!-- <div class="next_element_two fatpopcorn">
             <div class="popcorn-body">
