--- a/spec/javascripts/helpers/index.html
+++ b/spec/javascripts/helpers/index.html
@@ -184,6 +184,11 @@
                 </div>
 				<div class="popcorn-tail arrow-center" style="left: 71px;"></div>
             </div> 
-        </div>-->
+        </div>
+
+                    <div class="stream"><div class="content"><span class="line"></span><span class="time">Oggi</span><div class="attachment">
+                    <h1><a href="#">esito_tecnico_2.pdf</a></h1><p>Matteo De Vecchi ha allegato un file</p></div></div></div>
+
+    -->
 </body>
 </html>
