Added new functionalities of deleting the textarea when POSTing a new note and switching of tab. Struggled with the $.post().success() callback that in rails case should be substituted by a $.post().success('success.rails', function) callback

--- a/spec/dummy/public/index.html
+++ b/spec/dummy/public/index.html
@@ -37,7 +37,7 @@
 	</div>
 	
 			
-        <!-- <div class="next_element_two fatpopcorn">
+        <div class="next_element_two fatpopcorn">
             <div class="popcorn-body">
                 <div class="header">
                     <ul>
@@ -160,6 +160,6 @@
                 </div>
 				<div class="popcorn-tail arrow-center" style="left: 71px;"></div>
             </div> 
-        </div>-->
+        </div>
 </body>
 </html>
