--- a/spec/javascripts/helpers/index.html
+++ b/spec/javascripts/helpers/index.html
@@ -61,7 +61,7 @@
 		</span>
 	</div>
 			
-        <!-- <div class="next_element_two fatpopcorn">
+        <div class="next_element_two fatpopcorn">
             <div class="popcorn-body">
                 <div class="header">
                     <ul>
@@ -186,9 +186,9 @@
             </div> 
         </div>
 
-                    <div class="stream"><div class="content"><span class="line"></span><span class="time">Oggi</span><div class="attachment">
+<!--                     <div class="stream"><div class="content"><span class="line"></span><span class="time">Oggi</span><div class="attachment">
                     <h1><a href="#">esito_tecnico_2.pdf</a></h1><p>Matteo De Vecchi ha allegato un file</p></div></div></div>
-
-    -->
+ -->
+   
 </body>
 </html>
