First draft of the attachment section

--- a/spec/javascripts/helpers/index.html
+++ b/spec/javascripts/helpers/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/app/assets/stylesheets/corn.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="/app/assets/stylesheets/corn_js/23states.css" type="text/css" media="screen"/>  
     <link rel="stylesheet" href="/app/assets/stylesheets/corn_js/corn.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="/app/assets/stylesheets/corn_js/fileuploader.css" type="text/css" media="screen"/>
     <style type="text/css" media="screen">
         body{font: 12px/14px "Segoe UI", "Lucida Grande", Arial, sans-serif; height: 900px}
         .active_metadata_field {width:100px;}
@@ -13,6 +14,7 @@
  
     <script src="/spec/javascripts/support/jquery-1.7.1.min.js" type="text/javascript"></script>  
     <!-- include spec files here... -->
+    <script src="/app/assets/javascripts/corn_js/fileuploader.js" type="text/javascript"></script>
     <script src="/app/assets/javascripts/corn_js/corn.js" type="text/javascript"></script>
 
     <script type="text/javascript">
