Finished upload functionality

--- a/spec/javascripts/helpers/index.html
+++ b/spec/javascripts/helpers/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Jasmine Spec Runner</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta content="authenticity_token" name="csrf-param" />
+	<meta content="FfULk0JzRAN1fPIjLfVNpraKPAfRMtjhkSOWveDCza4=" name="csrf-token" />
 	<link rel="stylesheet" href="/app/assets/stylesheets/corn.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="/app/assets/stylesheets/corn_js/23states.css" type="text/css" media="screen"/>  
     <link rel="stylesheet" href="/app/assets/stylesheets/corn_js/corn.css" type="text/css" media="screen"/>
@@ -174,10 +176,7 @@
 	                        <a href="#">Inserisci</a>
 	                    </div>
 	                    <hr/>
-	                    <div class="attachment">
-	                        <h1>Allegati</h1>
-	                        <a href="#">Inserisci</a>
-	                    </div>
+<div class="attachment"><h1>Allegati</h1><div id="fatpopcorn_attach"><div class="qq-uploader"><div class="qq-upload-drop-area" style="display: none;"><span>Drop files here to upload</span></div><div class="qq-upload-button" style="position: relative; overflow: hidden; direction: ltr;">Inserisci<input type="file" name="file" style="position: absolute; right: 0pt; top: 0pt; font-family: Arial; font-size: 12px; margin: 0pt; padding: 0pt; cursor: pointer; opacity: 0;"></div><ul class="qq-upload-list"></ul></div></div><div id="attach_output"></div></div>
 	                    <div class="info">
 	                        <h1>Info</h1>
 	                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation...</p>
