--- a/spec/javascripts/fixtures/fatpopcorn-fixture.html
+++ b/spec/javascripts/fixtures/fatpopcorn-fixture.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+		<meta content="authenticity_token" name="csrf-param" />
+		<meta content="TOKEN" name="csrf-token" />
 		<title>fixture fatpopcorn</title>
         <style type="text/css">
             .one {
