Fixed the data-url attribute value and added the capability of reading data-model-id from element

--- a/spec/javascripts/fixtures/fatpopcorn-fixture.html
+++ b/spec/javascripts/fixtures/fatpopcorn-fixture.html
@@ -24,37 +24,17 @@
 	</head>
 	<body id="fixture" >
 		<div class="one">
-			<label for="addr_one">Address one</label>&nbsp;<input class="open_popcorn" type="text" name="addr_one" value="Via Mazzini 33" id="addr_one" data-label="my_label" data-stream="true" data-model="modelName">
+			<label for="addr_one">Address one</label>&nbsp;<input class="open_popcorn" type="text" name="addr_one" value="Via Mazzini 33" id="addr_one" data-label="my_label" data-stream="true" data-model="modelName" data-model-id="1">
 		</div>
 		<div class="two">
-			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label" data-stream="true" data-model="modelName">
+			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label" data-stream="true" data-model="modelName"  data-model-id="1">
 		</div>
 		<div class="three">
-			<label for="addr_three">Address three</label>&nbsp;<input class="open_popcorn" type="text" name="addr_three" value="Via Mazzini 33" id="addr_three" data-label="my_label" data-stream="true" data-model="modelName">
+			<label for="addr_three">Address three</label>&nbsp;<input class="open_popcorn" type="text" name="addr_three" value="Via Mazzini 33" id="addr_three" data-label="my_label" data-stream="true" data-model="anotherModelName"  data-model-id="2">
 		</div>
-
-<!-- 		<div class="grid_3">
-			<span class="fatpopcorn_grip">
-				<div class="_23states">
-					<input type="radio" value="true" true="Sì" nil="/" name="pratiche_progettazione[ok_installazione]" id="pratiche_progettazione_ok_installazione_true" false="No" data-watching="false" data-label="ok_installazione" class="active_metadata_field">
-					<label for="pratiche_progettazione_ok_installazione_true" class="true">
-						<span>Sì</span>
-					</label>
-					<input type="radio" value="" true="Sì" nil="/" name="pratiche_progettazione[ok_installazione]" id="pratiche_progettazione_ok_installazione_" false="No" data-watching="false" data-label="ok_installazione" class="active_metadata_field">
-					<label for="pratiche_progettazione_ok_installazione_" class="nil">
-						<span>/</span>
-					</label>
-					<input type="radio" value="false" true="Sì" nil="/" name="pratiche_progettazione[ok_installazione]" id="pratiche_progettazione_ok_installazione_false" false="No" data-watching="false" data-label="ok_installazione" class="active_metadata_field" checked="checked">
-					<label for="pratiche_progettazione_ok_installazione_false" class="false">
-						<span>No</span>
-					</label>
-				</div>
-			</span>
-		</div>
- --> 
 		<div class="other_element"/>
 		<div class="element_down">
-			<label for="addr_four">Address four</label>&nbsp;<input class="open_popcorn" type="text" name="addr_four" value="Via Mazzini 33" id="addr_four" data-label="my_label" data-stream="true"  data-model="modelName">
+			<label for="addr_four">Address four</label>&nbsp;<input class="open_popcorn" type="text" name="addr_four" value="Via Mazzini 33" id="addr_four" data-label="my_label" data-stream="true"  data-model="modelName" data-model-id="1">
 		</div>
 
 	</body>	
