Refactored code and added the capability of showing up the stream tab just in case you have a stream content and the edit tab for stream content empty

--- a/spec/javascripts/fixtures/fatpopcorn-fixture.html
+++ b/spec/javascripts/fixtures/fatpopcorn-fixture.html
@@ -24,17 +24,17 @@
 	</head>
 	<body id="fixture" >
 		<div class="one">
-			<label for="addr_one">Address one</label>&nbsp;<input class="open_popcorn" type="text" name="addr_one" value="Via Mazzini 33" id="addr_one" data-label="my_label" data-stream="true" data-model="modelName" data-model-id="1">
+			<label for="addr_one">Address one</label>&nbsp;<input class="open_popcorn" type="text" name="addr_one" value="Via Mazzini 33" id="addr_one" data-label="my_label" data-stream="1" data-model="modelName" data-model-id="1">
 		</div>
 		<div class="two">
-			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label" data-stream="true" data-model="modelName"  data-model-id="1">
+			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label" data-stream="0" data-model="modelName"  data-model-id="1">
 		</div>
 		<div class="three">
-			<label for="addr_three">Address three</label>&nbsp;<input class="open_popcorn" type="text" name="addr_three" value="Via Mazzini 33" id="addr_three" data-label="my_label" data-stream="true" data-model="anotherModelName"  data-model-id="2">
+			<label for="addr_three">Address three</label>&nbsp;<input class="open_popcorn" type="text" name="addr_three" value="Via Mazzini 33" id="addr_three" data-label="my_label" data-stream="2" data-model="anotherModelName"  data-model-id="2">
 		</div>
 		<div class="other_element"/>
 		<div class="element_down">
-			<label for="addr_four">Address four</label>&nbsp;<input class="open_popcorn" type="text" name="addr_four" value="Via Mazzini 33" id="addr_four" data-label="my_label" data-stream="true"  data-model="modelName" data-model-id="1">
+			<label for="addr_four">Address four</label>&nbsp;<input class="open_popcorn" type="text" name="addr_four" value="Via Mazzini 33" id="addr_four" data-label="my_label" data-stream="1"  data-model="modelName" data-model-id="1">
 		</div>
 
 	</body>	
