updated test accordingly to the changes

--- a/spec/javascripts/fixtures/fatpopcorn-fixture.html
+++ b/spec/javascripts/fixtures/fatpopcorn-fixture.html
@@ -24,7 +24,10 @@
 	</head>
 	<body id="fixture" >
 		<div class="one">
+			<span class="fatpopcorn_grip has-stream">
+			<div class="stream-items-count ">2</div>
 			<label for="addr_one">Address one</label>&nbsp;<input class="open_popcorn" type="text" name="addr_one" value="Via Mazzini 33" id="addr_one" data-label="my_label" data-stream="1" data-model="modelName" data-model-id="1" data-watching="true">
+			</span>
 		</div>
 		<div class="two">
 			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label" data-stream="0" data-model="modelName"  data-model-id="1" data-watching="true">
