--- a/spec/javascripts/fixtures/fatpopcorn-fixture.html
+++ b/spec/javascripts/fixtures/fatpopcorn-fixture.html
@@ -32,7 +32,7 @@
 		<div class="two">
 			<span class="fatpopcorn_grip">
 			<div id="stream-items-count-test" class="stream-items-count ">2</div>
-			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label" data-stream="0" data-model="modelName"  data-model-id="1" data-watching="true">
+			<label for="addr_two">Address two</label>&nbsp;<input class="open_popcorn" type="text" name="addr_two" value="Via Mazzini 33" id="addr_two" data-label="my_label2" data-stream="0" data-model="modelName"  data-model-id="1" data-watching="true">
 		</span>
 		</div>
 		<div class="three">
